# voidpdev

./: .env.example  Dockerfile  README.md  conclusions.md  deploy.sh  manage.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
docs/: about.md  index.md
docs/archive/: p6_aiogram_tutorial.md
docs/blog/posts/: _definitions_theorems_proofs.md  _gis_intro_postgis.md  _rs_algebraic_data_types.md  _rs_ownership_borrowing.md  beejs_reference.md  dynamic_memory_in_c.md  go_net_http.md  linux_basic_commands.md  p1_dynamic_memory_in_c.md  p2_struct_union_enum_in_c.md  p3_preprocessors_and_macros_in_c.md  p4_uv-ruff.md  p5_ReactUnderTheHood-030725.md  p6_aiogram_tutorial.md  p6_telegram_bot_guide.md  p7_TwoScoopsOfDjango.md  p7_go_net_http.md  p8_go_net_http.md  p9_why_discrete_math.md  post1.md  preprocessors_and_macros_in_c.md  react_analysis.md  rs_common_concepts.md  struct_union_enum_in_c.md  (+4 more)
docs/projects/: cserve.md  gira.md  index.md  nginx_clone.md  oberoon.md  overview.md
drafts/: golang_path.md  how_kernel_boots.md  p9_why_discrete_math.md
overrides/: index.html
overrides/partials/: comments.html
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_blogpost_content.py
pages/templatetags/: markdown_extras.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  projects.html
templates/blog/: blog_detail.html  blog_list.html
templates/partials/: project_list.html
(+29 files in other folders)
